--- a/index.haml
+++ b/index.haml
@@ -9,9 +9,20 @@
   %body
     %h1= @title
     %div
-      Image URL : 
-      %input{:id => 'img_url', :type => 'text', :value => './shokai-big.jpg', :size => '50'}
-      %input{:id => 'btn_draw', :type => 'button', :value => 'draw'}
+      %div
+        Image URL : 
+        %input{:id => 'img_url', :type => 'text', :value => './shokai-big.jpg', :size => '50'}
+        %input{:id => 'btn_draw', :type => 'button', :value => 'draw'}
+      %div{:id => 'stroke'}
+        color : 
+        %select{:id => 'color'}
+          %option{:value => '#FF0000'} red
+          %option{:value => '#00FF00'} green
+          %option{:value => '#0000FF'} blue
+        size : 
+        %select{:id => 'size'}
+          - for i in 1..10 do
+            %option{:value => i}= i
     %canvas#img
     %hr
       - @src_url = 'https://github.com/shokai/js-canvas-test'
