--- a/draw/index.haml
+++ b/draw/index.haml
@@ -11,7 +11,7 @@
     %div
       %div
         Image URL : 
-        %input{:id => 'img_url', :type => 'text', :value => './shokai-big.jpg', :size => '50'}
+        %input{:id => 'img_url', :type => 'text', :value => '../shokai-big.jpg', :size => '50'}
         %input{:id => 'btn_draw', :type => 'button', :value => 'draw'}
       %div{:id => 'stroke'}
         color : 
