--- a/draw/index.haml
+++ b/draw/index.haml
@@ -4,7 +4,7 @@
   %head
     %title= @title
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html', :charset => 'UTF-8'}
-    %script{:type => 'text/javascript', :src => "jquery.js"}
+    %script{:type => 'text/javascript', :src => "../jquery.js"}
     %script{:type => 'text/javascript', :src => "main.js"}
   %body
     %h1= @title
